--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 animation-fill-mode: forwards;
             }
             body{
-                height: 520px;
+                height: 1000px;
                 background-image: linear-gradient(rgb(103, 0, 147),rgb(44, 0, 63));
             }
             h1{
@@ -46,17 +46,17 @@
     <body style="background-color: rgb(44, 0, 63);">
         <h1 style="font-family: Georgia, 'Times New Roman', Times, serif; ">You've been chosen!</h1>
         <h4 id="h4" style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Look through the memories and click on your favourite picture of Jadine</h4>
-        <img id="image" src="C:\Users\jadin\Desktop\21st\jadine\001.JPG" width="200" height="200"alt="pic1">
-        <img id="image" src="C:\Users\jadin\Desktop\21st\jadine\007.JPG" width="200" height="200"alt="pic2">
-        <img id="image" src="C:\Users\jadin\Desktop\21st\jadine\016.JPG" width="200" height="200"alt="pic3">
-        <img id="image" src="C:\Users\jadin\Desktop\21st\jadine\022.JPG" width="200" height="200"alt="pic4">
-        <img id="image" src="C:\Users\jadin\Desktop\21st\jadine\063.JPG" width="200" height="200"alt="pic5">
+        <img id="image" src="001.JPG" width="200" height="200"alt="pic1">
+        <img id="image" src="007.JPG" width="200" height="200"alt="pic2">
+        <img id="image" src="016.JPG" width="200" height="200"alt="pic3">
+        <img id="image" src="022.JPG" width="200" height="200"alt="pic4">
+        <img id="image" src="063.JPG" width="200" height="200"alt="pic5">
         <br>
-        <img id="image" src="C:\Users\jadin\Desktop\21st\jadine\067.JPG" width="200" height="200"alt="pic6">
-        <img id="image" src="C:\Users\jadin\Desktop\21st\jadine\070.JPG" width="200" height="200"alt="pic7">
-        <img id="image" src="C:\Users\jadin\Desktop\21st\jadine\073.JPG" width="200" height="200"alt="pic8">
-        <img id="image" src="C:\Users\jadin\Desktop\21st\jadine\099.JPG" width="200" height="200"alt="pic9">
-        <img id="image" src="C:\Users\jadin\Desktop\21st\jadine\Photo-0025.jpg" width="200" height="200"alt="pic10">
+        <img id="image" src="067.JPG" width="200" height="200"alt="pic6">
+        <img id="image" src="070.JPG" width="200" height="200"alt="pic7">
+        <img id="image" src="073.JPG" width="200" height="200"alt="pic8">
+        <img id="image" src="099.JPG" width="200" height="200"alt="pic9">
+        <img id="image" src="Photo-0025.jpg" width="200" height="200"alt="pic10">
     </body>
 </html>
             
