--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
     <body>
         <h1 style="font-family: Georgia, 'Times New Roman', Times, serif; ">You've been chosen!</h1>
         <h4 id="h4" style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Look through the memories and click on your favourite picture of Jadine</h4>
-        <a href="invite.html"><img id="image" src="C:\Users\jadin\Desktop\21st\jadine\001.JPG" width="200" height="200"alt="pic1"></a>
-        <a href="invite.html"><img id="image" src="C:\Users\jadin\Desktop\21st\jadine\007.JPG" width="200" height="200"alt="pic2"></a>
-        <a href="invite.html"><img id="image" src="C:\Users\jadin\Desktop\21st\jadine\016.JPG" width="200" height="200"alt="pic3"></a>
-        <a href="invite.html"><img id="image" src="C:\Users\jadin\Desktop\21st\jadine\022.JPG" width="200" height="200"alt="pic4"></a>
-        <a href="invite.html"><img id="image" src="C:\Users\jadin\Desktop\21st\jadine\063.JPG" width="200" height="200"alt="pic5"></a>
+        <a href="invite.html"><img id="image" src="001.JPG" width="200" height="200"alt="pic1"></a>
+        <a href="invite.html"><img id="image" src="007.JPG" width="200" height="200"alt="pic2"></a>
+        <a href="invite.html"><img id="image" src="016.JPG" width="200" height="200"alt="pic3"></a>
+        <a href="invite.html"><img id="image" src="022.JPG" width="200" height="200"alt="pic4"></a>
+        <a href="invite.html"><img id="image" src="063.JPG" width="200" height="200"alt="pic5"></a>
         <br>
-        <a href="invite.html"><img id="image" src="C:\Users\jadin\Desktop\21st\jadine\067.JPG" width="200" height="200"alt="pic6"></a>
-        <a href="invite.html"><img id="image" src="C:\Users\jadin\Desktop\21st\jadine\070.JPG" width="200" height="200"alt="pic7"></a>
-        <a href="invite.html"><img id="image" src="C:\Users\jadin\Desktop\21st\jadine\073.JPG" width="200" height="200"alt="pic8"></a>
-        <a href="invite.html"><img id="image" src="C:\Users\jadin\Desktop\21st\jadine\099.JPG" width="200" height="200"alt="pic9"></a>
-        <a href="invite.html"><img id="image" src="C:\Users\jadin\Desktop\21st\jadine\Photo-0025.jpg" width="200" height="200"alt="pic10"></a>
+        <a href="invite.html"><img id="image" src="067.JPG" width="200" height="200"alt="pic6"></a>
+        <a href="invite.html"><img id="image" src="070.JPG" width="200" height="200"alt="pic7"></a>
+        <a href="invite.html"><img id="image" src="073.JPG" width="200" height="200"alt="pic8"></a>
+        <a href="invite.html"><img id="image" src="099.JPG" width="200" height="200"alt="pic9"></a>
+        <a href="invite.html"><img id="image" src="Photo-0025.jpg" width="200" height="200"alt="pic10"></a>
     </body>
 </html>
