--- a/invite.html
+++ b/invite.html
@@ -43,7 +43,7 @@
   </head>
   <body>
     <div class="image-container">
-        <a href="invitation.jpg" download="Jadine21stInvitation"><img src="invitation.jpg" alt="invitation"> </a>
+        <a href="invitation.jpg" download="Jadine21stInvitation"><img src="invitation.jpg" alt="Click here to download"> Click here to download </a>
     </div>     
  
   </body>
