--- a/invite.html
+++ b/invite.html
@@ -44,7 +44,7 @@
   <body>
     <div class="image-container">
         <p>Click the image below to download</p>
-        <a href="invitation.jpg" download="Jadine21stInvitation"><img src="invitation.jpg" alt="Click here to download"> Click here to download </a>
+        <a href="invitation.jpg" download="Jadine21stInvitation"><img src="invitation.jpg" alt="Click here to download"> </a>
     </div>     
  
   </body>
