--- a/invite.html
+++ b/invite.html
@@ -43,7 +43,7 @@
   </head>
   <body>
     <div class="image-container">
-        <p>Click the image below to download</p>
+        <p>Click the image to download</p>
         <a href="invitation.jpg" download="Jadine21stInvitation"><img src="invitation.jpg" alt="Click here to download"> </a>
     </div>     
  
