--- a/invite.html
+++ b/invite.html
@@ -42,8 +42,8 @@
     </style>
   </head>
   <body>
+    <p style="text-align: center">Click the image to download</p>
     <div class="image-container">
-        <p>Click the image to download</p>
         <a href="invitation.jpg" download="Jadine21stInvitation"><img src="invitation.jpg" alt="Click here to download"> </a>
     </div>     
  
