--- a/invite.html
+++ b/invite.html
@@ -42,7 +42,7 @@
     </style>
   </head>
   <body>
-    <p style="text-align: center">Click the image to download</p>
+    <h3 style="text-align: center">Click the image to download</h3>
     <div class="image-container">
         <a href="invitation.jpg" download="Jadine21stInvitation"><img src="invitation.jpg" alt="Click here to download"> </a>
     </div>     
