--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             }
             h4{
                 color:darkviolet; 
+                position: relative;
                 animation: heading4 6s;
                 animation-fill-mode: forwards;
             }
@@ -32,7 +33,7 @@
             }
             @keyframes heading4{
                 from {left: -1000px;}
-                to {left: 300px;}
+                to {left: 0px;}
             }
             @keyframes images {
                 from{left: -1200px;}
