--- a/invite.html
+++ b/invite.html
@@ -42,7 +42,7 @@
     </style>
   </head>
   <body>
-    <h1 style="text-align: center">Click the image below to download</h1>
+    <h1 style="text-align: center">Click the image below to download the invitation onto your device</h1>
     <div class="image-container">
         <a href="invitation.jpg" download="Jadine21stInvitation"><img src="invitation.jpg" alt="Click here to download"> </a>
     </div>     
