--- a/invite.html
+++ b/invite.html
@@ -44,7 +44,7 @@
   <body>
     <h1 style="text-align: center">Click the image below to download the invitation onto your device</h1>
     <div class="image-container">
-        <a href="invitation.jpg" download="Jadine21stInvitation"><img src="invitation.jpg" alt="Click here to download"> </a>
+        <a href="Invite.jpg" download="Jadine21stInvitation"><img src="Invite.jpg" alt="Click here to download"> </a>
     </div>     
  
   </body>
