--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         </style>
     </head>
     <body>
-        <h1 style="font-family: Georgia, 'Times New Roman', Times, serif; ">You've been chosen!</h1>
-        <h4 id="h4" style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Look through the memories and click on your favourite picture of Jadine</h4>
+        <h1 style="font-family: Georgia, 'Times New Roman', Times, serif; ">You're invited!</h1>
+        <h4 id="h4" style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Scroll through the memories and click on your favourite picture of Jadine</h4>
         <a href="invite.html"><img id="image" src="001.JPG" width="200" height="200"alt="pic1"></a>
         <a href="invite.html"><img id="image" src="007.JPG" width="200" height="200"alt="pic2"></a>
         <a href="invite.html"><img id="image" src="016.JPG" width="200" height="200"alt="pic3"></a>
